--- a/client/web/template/login.html
+++ b/client/web/template/login.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/base.css">
-	<title>Filmer</title>
+	<link rel="stylesheet" type="text/css" href="../static/css/login.css">
+	<title>Login | Filmer</title>
 </head>
 <body>
 	<header>
@@ -21,7 +22,7 @@
 				</button>
 				<button class="nav-elem nav-text-button-elem">
 					<a href="#">stared</a>
-				</button>
+					</button>
 				<button class="nav-elem nav-text-button-elem">
 					<a href="#">want</a>
 				</button>
@@ -29,7 +30,7 @@
 					<a href="#">watched</a>
 				</button>
 
-				<button class="nav-elem profile"><a href="./profile.html">
+				<button class="nav-elem profile"><a href="./signup.html">
 					<img src="../static/img/profile.svg" alt="profile">
 				</a></button>
 			</div>
@@ -38,6 +39,25 @@
 		<h1 class="title">Filmer</h1>
 	</header>
 
-	<!-- <img src="../static/img/non_poster.svg"> -->
+	<div class="content">
+		<form action="#" method="post">
+			<div class="form-elem form-input-container">
+				<div class="form-elem form-input">
+					<label for="email">Email</label>
+					<input class="form-elem" type="text" id="email" name="email" placeholder="user@example.com">
+				</div>
+				<div class="form-elem form-input">
+					<label for="password">Password</label>
+					<input class="form-elem" type="password" id="password" name="password">
+				</div>
+			</div>
+			<button class="form-elem" type="submit">Login</button>
+
+			<div class="form-elem to-signup">
+				<p>Do not have an account?</p>
+				<a href="./signup.html">Sign up</a>
+			</div>
+		</form>
+	</div>
 </body>
 </html>
