--- a/client/web/template/login.html
+++ b/client/web/template/login.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/base.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/signup_login.css">
+	<script type="text/javascript" src="../static/js/base.js"></script>
 	<title>Login | Filmer</title>
 </head>
 <body>
@@ -17,21 +18,21 @@
 				</a></button>
 			</div>
 			<div class="right-nav-container">
-				<button class="nav-elem nav-text-button-elem">
-					<a href="#">search</a>
+				<button class="nav-elem nav-menu-button-elem">
+					<a id="menu-search-link" href="#">search</a>
 				</button>
-				<button class="nav-elem nav-text-button-elem">
-					<a href="#">stared</a>
-					</button>
-				<button class="nav-elem nav-text-button-elem">
-					<a href="#">want</a>
+				<button class="nav-elem nav-menu-button-elem">
+					<a id="menu-stared-link" href="#">stared</a>
 				</button>
-				<button class="nav-elem nav-text-button-elem">
-					<a href="#">watched</a>
+				<button class="nav-elem nav-menu-button-elem">
+					<a id="menu-want-link" href="#">want</a>
+				</button>
+				<button class="nav-elem nav-menu-button-elem">
+					<a id="menu-watched-link" href="#">watched</a>
 				</button>
 
 				<button class="nav-elem profile"><a href="./signup.html">
-					<img src="../static/img/profile.svg" alt="profile">
+					<img src="../static/img/header/profile.svg" alt="profile">
 				</a></button>
 			</div>
 		</nav>
