--- a/client/web/template/index.html
+++ b/client/web/template/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/base.css">
+	<script type="text/javascript" src="../static/js/base.js"></script>
 	<title>Filmer</title>
 </head>
 <body>
@@ -16,21 +17,21 @@
 				</a></button>
 			</div>
 			<div class="right-nav-container">
-				<button class="nav-elem nav-text-button-elem">
-					<a href="#">search</a>
+				<button class="nav-elem nav-menu-button-elem">
+					<a id="menu-search-link" href="#">search</a>
 				</button>
-				<button class="nav-elem nav-text-button-elem">
-					<a href="#">stared</a>
+				<button class="nav-elem nav-menu-button-elem">
+					<a id="menu-stared-link" href="#">stared</a>
 				</button>
-				<button class="nav-elem nav-text-button-elem">
-					<a href="#">want</a>
+				<button class="nav-elem nav-menu-button-elem">
+					<a id="menu-want-link" href="#">want</a>
 				</button>
-				<button class="nav-elem nav-text-button-elem">
-					<a href="#">watched</a>
+				<button class="nav-elem nav-menu-button-elem">
+					<a id="menu-watched-link" href="#">watched</a>
 				</button>
 
 				<button class="nav-elem profile"><a href="./profile.html">
-					<img src="../static/img/profile.svg" alt="profile">
+					<img src="../static/img/header/profile.svg" alt="profile">
 				</a></button>
 			</div>
 		</nav>
