--- a/client/web/template/index.html
+++ b/client/web/template/index.html
@@ -18,10 +18,10 @@
 			</div>
 			<div class="right-nav-container">
 				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-search-link" href="#">search</a>
+					<a id="menu-search-link" href="./search.html">search</a>
 				</button>
 				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-stared-link" href="#">stared</a>
+					<a id="menu-stared-link" href="./stared.html">stared</a>
 				</button>
 				<button class="nav-elem nav-menu-button-elem">
 					<a id="menu-want-link" href="#">want</a>
@@ -31,14 +31,12 @@
 				</button>
 
 				<button class="nav-elem profile"><a href="./profile.html">
-					<img src="../static/img/header/profile.svg" alt="profile">
+					<img src="../static/img/profile.svg" alt="profile">
 				</a></button>
 			</div>
 		</nav>
 
 		<h1 class="title">Filmer</h1>
 	</header>
-
-	<!-- <img src="../static/img/non_poster.svg"> -->
 </body>
 </html>
