--- a/client/web/template/stared.html
+++ b/client/web/template/stared.html
@@ -5,9 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/base.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/profile.css">
 	<script type="text/javascript" src="../static/js/base.js"></script>
-	<title>Profile | Filmer</title>
+	<title>Filmer</title>
 </head>
 <body>
 	<header>
@@ -19,10 +18,10 @@
 			</div>
 			<div class="right-nav-container">
 				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-search-link" href="#">search</a>
+					<a id="menu-search-link" href="./search.html">search</a>
 				</button>
 				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-stared-link" href="#">stared</a>
+					<a id="menu-stared-link" href="./stared.html">stared</a>
 				</button>
 				<button class="nav-elem nav-menu-button-elem">
 					<a id="menu-want-link" href="#">want</a>
@@ -31,7 +30,7 @@
 					<a id="menu-watched-link" href="#">watched</a>
 				</button>
 
-				<button class="nav-elem profile"><a href="./signup.html">
+				<button class="nav-elem profile"><a href="./profile.html">
 					<img src="../static/img/profile.svg" alt="profile">
 				</a></button>
 			</div>
@@ -41,16 +40,15 @@
 	</header>
 
 	<div class="content">
-		<h4>You are already authorized as <span class="accent">user@gmail.com</span></h4>
+		<!-- <form class="search-form" action="#" method="post">
 
-		<p id="session-expiration">
-			Your session expires in <span id="hours">2</span>h <span id="minutes">30</span>m <span id="seconds">45</span>s
-		</p>
+		</form>
 
-		<button class="link-button"><a href="#">Logout Now</a></button>
+		<div class="movie-list">
+			<div class="movie">
+				<img src="../static/img/non_poster.svg">
+			</div>
+		</div> -->
 	</div>
-
-	<!-- <img src="../static/img/non_poster.svg"> -->
-	<script type="text/javascript" src="../static/js/profile.js"></script>
 </body>
 </html>
