--- a/client/web/template/signup.html
+++ b/client/web/template/signup.html
@@ -32,7 +32,7 @@
 				</button>
 
 				<button class="nav-elem profile"><a href="./signup.html">
-					<img src="../static/img/header/profile.svg" alt="profile">
+					<img src="../static/img/profile.svg" alt="profile">
 				</a></button>
 			</div>
 		</nav>
