Added auth renders and post handlers

--- a/client/web/static/css/base.css
+++ b/client/web/static/css/base.css
@@ -108,7 +108,8 @@ nav {
 	text-align: center;
 }
 .content > * {
-	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* every movie poster border and size */
