--- a/client/web/template/base.html
+++ b/client/web/template/base.html
@@ -41,5 +41,23 @@
 	</header>
 
 	{% block content %}{% endblock %}
+
+	<script type="text/javascript">
+		// select form elem
+		const formElem = document.querySelector('form');
+		if (formElem === undefined || formElem === null) {
+		    console.log("no one form on page")
+		} else {
+			formElem.addEventListener("submit", function(event) {
+			    event.preventDefault();
+			    // add page GET query-params to POST request
+			    let paramsString = window.location.search;
+			    let searchParams = new URLSearchParams(paramsString);
+			    formElem.action = formElem.action + "?" + searchParams.toString();
+			    // send form
+			    this.submit();
+			});
+		}
+	</script>
 </body>
 </html>
