--- a/client/web/template/signup.html
+++ b/client/web/template/signup.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 	<div class="content">
-		<form action="/user/sign-up" method="post">
+		<form onsubmit="addQueryParamsToForm(this)" action="/user/sign-up" method="post">
 			<div class="form-elem form-input-container">
 				<div class="form-elem form-input">
 					<label for="email">Email</label>
