--- a/client/web/template/index.html
+++ b/client/web/template/index.html
@@ -9,8 +9,8 @@
 {% block content %}
 	<div class="content flex-content">
 		<div class="description">
-			<p>Filmer is a service to manage movie lists</p>
-			<p>
+			<p class="description-p">Filmer is a service to manage movie lists</p>
+			<p class="description-p">
 				<a href="/movie/search">Search</a> movies,
 				<a href="/user-movie/stared">star</a> it and save it to
 				<a href="/user-movie/want">want</a> or
