--- a/client/web/template/login.html
+++ b/client/web/template/login.html
@@ -12,7 +12,7 @@
 			<div class="form-elem form-input-container">
 				<div class="form-elem form-input">
 					<label for="email">Email</label>
-					<input class="form-elem" type="text" id="email" name="email" placeholder="user@example.com">
+					<input class="form-elem" type="email" id="email" name="email" placeholder="user@example.com">
 				</div>
 				<div class="form-elem form-input">
 					<label for="password">Password</label>
