--- a/client/web/template/base.html
+++ b/client/web/template/base.html
@@ -5,11 +5,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/base.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/error_message.css">
 	{% block css %}{% endblock %}
 	<script type="text/javascript" src="/static/js/base.js"></script>
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+	<div id="error-message">
+		<h2 id="error-message-title">Error</h2>
+		<p id="error-message-code">404</p>
+		<p id="error-message-text">
+			a long error message to explain to users what stupid amoeba they are
+		</p>
+	</div>
+
 	<header>
 		<nav>
 			<div class="logo-container">
